--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,9 +4,11 @@ node {
     }
 
     stage('Run tests'){
-
+        if(isUnix()){
+            sh "mvn clean test"
+        } else {
             bat "mvn clean test -Dcucumber.filter.tags=\"@regression\" "
-
+        }
 
     }
 
