--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser=headless-chrome
+browser=chrome-headless
 googleSearch=https://www.google.com
 bingSearch=https://www.bing.com
 etsyURL=https://www.etsy.com
