--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser=chrome-headless
+browser=chrome
 googleSearch=https://www.google.com
 bingSearch=https://www.bing.com
 etsyURL=https://www.etsy.com
