--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <parallel>methods</parallel>
-                    <useUnlimitedThreads>false</useUnlimitedThreads>
-                    <threadCount>2</threadCount>
+                    <useUnlimitedThreads>true</useUnlimitedThreads>
+<!--                    <threadCount>2</threadCount>-->
                     <perCoreThreadCount>false</perCoreThreadCount>
                     <testFailureIgnore>true</testFailureIgnore>
                     <includes>
