--- a/configuration.properties
+++ b/configuration.properties
@@ -1,9 +1,7 @@
-browser=chrome-remote
+browser=chrome
 googleSearch=https://www.google.com
 bingSearch=https://www.bing.com
 etsyURL=https://www.etsy.com
-
-
 
 searchKeyForGoogle=apple
 searchKeyForBing=orange
